# IndustrialMotionDetection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_cpu.txt
conf/: meva_preproc.yaml  train.yaml
docs/: mkdocs.yml
docs/docs/: index.md
hiera_test/train/: dataset.py  run_epoch.py  train.py
models/: Sabotage_MobileNet.ipynb
models/SkeletonActionRecognition/: requirements.txt
models/SkeletonActionRecognition/configs/: models.yaml
models/SkeletonActionRecognition/dataset_creation/: dataset_creator.py  video_frame_extractor.py
notebooks/: EffNetMobNetModelsFinal.ipynb  dataset_loader.ipynb  hiera_based_model.ipynb  meva-processed-eda.ipynb
scripts/: download.py  upload.py
src/: README.md  config.py  logger.py  loss.py  metrics.py  meva_preprocessing.py  plots.py  split_csv.py  utils.py
src/data/: DATASETS.md  data_transform.py  dataset.py  dataset_collected.py  encoded_video.py  encoded_video_pyav.py  meva_preprocessing.py  transform.py
src/dataset/: add_green_screen.py  convert_annotations.py  pipeline.py  sampler.py  use_libcom.py
src/metrics_impl/: BoundingBox.py  BoundingBoxes.py  Evaluator.py  Evauator.py
src/models/: box_list.py  dataset.py  detector.py  metrics.py  model.py  model2.py  model3.py  model_hiera_base.py  pooler.py  predict.py  roi_align_3d.py  train.py  transforms.py
src/train/: run_epoch.py  train.py  utils.py
src/transforms/: _init__.py  functional.py  transforms.py
src/transforms_impl/: functional.py  transforms.py
src/video/: encoded_video.py  encoded_video_pyav.py  utils.py
(+24 files in other folders)
