[tool.poetry]
name = "industrialmotiondetection"
version = "0.1.0"
description = "Motion Detection Library"
authors = ["CTLab-ITMO"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
opencv-python = "^4.11.0.86"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
awscli = "^1.38.27"
ipykernel = "^6.29.5"
matplotlib = "3.9"
seaborn = "^0.13.2"
torch = {version = "^2.6.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.21.0+cpu", source = "pytorch_cpu"}
kaggle = "^1.7.4.2"
python-dotenv = "^1.1.0"
timm = "^1.0.15"
pytorchvideo = "^0.1.5"
jupyter = "^1.1.1"
tensorboard = "^2.19.0"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
